# cell-type-prediction-in-spatial-transcriptomics-data-using-gnns

./: .gitattributes  .gitignore  README.md  main.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
ctgnn/: __init__.py
ctgnn/data/: __init__.py  construction_utils.py  data_loading.py  graph_construction.py  transforms.py
ctgnn/evaluation/: __init__.py  results_utils.py
ctgnn/nn/: __init__.py  gat.py  gcn.py  gin.py  mlp.py  sage.py  utils.py
ctgnn/training/: __init__.py  data.py  metrics.py  models.py  trainers.py  utils.py
ctgnn/utils/: __init__.py  torch.py
data/01_intestine/: README.txt  cell_by_gene.parquet  cell_coords.parquet  cluster_assignment.parquet
data/02_mouse_embryo/: README.txt  cell_by_gene.parquet  cell_coords.parquet  cluster_assignment.parquet
data/03_hypothalamus/: README.txt  cell_by_gene.parquet  cell_coords.parquet  cluster_assignment.parquet
data/04_mouse_brain/: README.txt  cell_by_gene.parquet  cell_coords.parquet  cluster_assignment.parquet
data/results/: main_2024_01_17.parquet  shuffled_edges_2024_01_18.parquet
run_configs/: run_config.yaml  shuffled_config.yaml
test/: conftest.py
test/data/: test_construction_utils.py  test_data_loading.py  test_graph_construction.py  test_transforms.py
test/evaluation/: test_results_utils.py
test/nn/: test_gat.py  test_gcn.py  test_gin.py  test_mlp.py  test_sage.py  test_utils.py
test/training/: test_data.py  test_metrics.py  test_models.py  test_trainers.py  test_utils.py
test/utils/: test_torch_utils.py
